--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -12,6 +12,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number8\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(n):\n",
+    "    fun_sum = 0\n",
+    "    for i in range(1, n):\n",
+    "        fun_sum += i % 5\n",
+    "    return fun_sum\n",
+    "\n",
+    "n = int(input(\"insert number\"))\n",
+    "print(fun(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -29,6 +54,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcd(n, m):\n",
+    "    gcd_list = []\n",
+    "    for i in range(1, max(n, m)):\n",
+    "        if n % i == 0 and m % i == 0:\n",
+    "            gcd_list.append(i)\n",
+    "    return max(gcd_list)\n",
+    "\n",
+    "def lcm(n, m):\n",
+    "    i = max(n, m)\n",
+    "    while True:\n",
+    "        if i % n ==0 and i % m == 0:\n",
+    "            break\n",
+    "        i += 1\n",
+    "    return i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gcd(12, 36)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "252"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lcm(14, 36)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -40,17 +127,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#214 아래의 조건을 만족하면서, 100,000보다 작은 자연수 중 3 또는 5의 배수를 모두 더한 합을 출력하는 프로그램을 작성하시오.\n",
+    "## 214 아래의 조건을 만족하면서, 100,000보다 작은 자연수 중 3 또는 5의 배수를 모두 더한 합을 출력하는 프로그램을 작성하시오.\n",
     "\n",
     "# 1) 3의 배수를 판정하는 함수 isMulThree(n)와 5의 배수를 판정하는 함수 ismulFive(n)을 정의하여 사용"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def isMulThree(n):\n",
+    "    MulThree = 0\n",
+    "    for i in range(100000):\n",
+    "        if i % 3 ==0:\n",
+    "            MulThree += i\n",
+    "    return MulThree\n",
+    "\n",
+    "def isMulFive(n):\n",
+    "    MulFive = 0\n",
+    "    for i in range(100000):\n",
+    "        if i % 5 ==0:\n",
+    "            MulFive += i\n",
+    "    return MulFive\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1666683333"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isMulThree(100000)"
+   ]
   },
   {
    "cell_type": "code",
