--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -134,44 +134,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def isMulThree(n):\n",
-    "    MulThree = 0\n",
-    "    for i in range(100000):\n",
-    "        if i % 3 ==0:\n",
-    "            MulThree += i\n",
-    "    return MulThree\n",
-    "\n",
-    "def isMulFive(n):\n",
-    "    MulFive = 0\n",
-    "    for i in range(100000):\n",
-    "        if i % 5 ==0:\n",
-    "            MulFive += i\n",
-    "    return MulFive\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1666683333"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2333316668\n"
+     ]
     }
    ],
    "source": [
-    "isMulThree(100000)"
+    "def isMulThree(n):\n",
+    "    return n % 3 == 0\n",
+    "\n",
+    "def isMulFive(n):\n",
+    "    return n % 5 == 0\n",
+    "\n",
+    "sum = 0\n",
+    "for i in range(100000):\n",
+    "    if isMulThree(i) or isMulFive(i):\n",
+    "        sum += i\n",
+    "\n",
+    "print(sum)"
    ]
   },
   {
