--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -286,45 +286,275 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[2, 3, 4, 5, 6]\n",
+      "[3, 4, 5, 6, 7]\n",
+      "[4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array = [[0] * 5 for i in range(5)]\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        array[i][j] = i + j\n",
+    "        \n",
+    "for i in range(5):\n",
+    "    print(array[i])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4, 5],\n",
+       " [2, 3, 4, 5, 6],\n",
+       " [3, 4, 5, 6, 7],\n",
+       " [4, 5, 6, 7, 8],\n",
+       " [5, 6, 7, 8, 9]]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [[j for j in range(i+1, i+6)] for i in range(5)]\n",
+    "a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4, 5],\n",
+       " [2, 3, 4, 5, 6],\n",
+       " [3, 4, 5, 6, 7],\n",
+       " [4, 5, 6, 7, 8],\n",
+       " [5, 6, 7, 8, 9]]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [list(range(i+1, i+6)) for i in range(5)]\n",
+    "a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 6 13 16  4 24 \n",
+      " 1  3  5  4  1 \n",
+      " 8 19  6  8 23 \n",
+      " 9 13 16  3 16 \n",
+      "16 19  3 13 15 \n",
+      "Small\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "array = [[0] * 5 for i in range(5)]\n",
+    "for i in range(0, 25):\n",
+    "    array[i // 5][i % 5] = random.randrange(1, 26)\n",
+    "sum = 0\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        print(\"%2d\" % array[i][j], end = ' ')\n",
+    "        sum += array[i][j]\n",
+    "    print()\n",
+    "\n",
+    "if sum/25 >= 12.5 :\n",
+    "    print(\"Big\")\n",
+    "else:\n",
+    "    print(\"Small\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 8 21 12 18  8 \n",
+      "11  5  8 16  3 \n",
+      "18 19 24  2 24 \n",
+      "22 22 24 22 19 \n",
+      "20 13 24  5 16 \n",
+      "Big\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "a = [[0]*5 for i in range(5)]\n",
+    "\n",
+    "for i in range(0,25):\n",
+    "    array[i//5][i % 5] = random.randrange(1,26)\n",
+    "sum = 0\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        print(\"%2d\" %array[i][j], end = \" \")\n",
+    "        sum += array[i][j]\n",
+    "    print()\n",
+    "if sum/25 >= 12.5:\n",
+    "    print(\"Big\")\n",
+    "else:\n",
+    "    print(\"Small\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentenc: Hello World\n",
+      "upper :  2 lower : 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "char = input(\"Enter the sentenc: \")\n",
+    "\n",
+    "def numOfupp(str):\n",
+    "    num = 0\n",
+    "    for i in range(len(char)):\n",
+    "        if 'A' <= str[i] <= 'Z':\n",
+    "            num += 1\n",
+    "    return num\n",
+    "\n",
+    "def numOflow(str):\n",
+    "    num = 0\n",
+    "    for i in range(len(str)):\n",
+    "        if 'a' <= str[i] <= 'z':\n",
+    "            num += 1\n",
+    "    return num\n",
+    "\n",
+    "print('upper : ', numOfupp(char), \"lower :\", numOflow(char))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upper : 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"upper :\", numOfupp(char))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def str_rev(str):\n",
+    "    return str[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dlroW olleH'"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str_rev(char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dlroW olleH'"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[::-1]"
+   ]
   },
   {
    "cell_type": "code",
