--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88134,22 +88134,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alphabet = list(alphabet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
-      ]
-     },
-     "execution_count": 197,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentence: Hell World\n",
+      "ABCFGIJKMNPQSTUVXYZ"
+     ]
     }
    ],
    "source": [
-    "al"
+    "mystr = list(input(\"Enter the sentence: \").upper())\n",
+    "for i in alphabet:\n",
+    "    if not (i in mystr):\n",
+    "        print(i, end = \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number3\n",
+      "[1, 3, 5, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"insert number\"))\n",
+    "num = [0] * (2 * n)\n",
+    "\n",
+    "for i in range(0, n):\n",
+    "    num[i] = i*2 + 1\n",
+    "\n",
+    "for j in range(0, n):\n",
+    "    num[2*n-1-j] = 2 + 2 * j\n",
+    "    \n",
+    "print(num)"
    ]
   },
   {
