--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88194,7 +88194,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input(\"inset number\"))\n",
+    "array = [[0] * 2 for i in range(3)]\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
