--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88191,13 +88191,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 27\n",
+      "39 100\n",
+      "19 88\n",
+      "가로평균:  21 69 53 \n",
+      "세로평균:  24 71 \n",
+      "전체평균 : 48\n"
+     ]
+    }
+   ],
    "source": [
-    "n = int(input(\"inset number\"))\n",
+    "num1 = input().split(\" \")\n",
+    "num2 = input().split(\" \")\n",
+    "num3 = input().split(\" \")\n",
     "array = [[0] * 2 for i in range(3)]\n",
-    "\n"
+    "array[0] = [int(num1[0]), int(num1[1])]\n",
+    "array[1] = [int(num2[0]), int(num2[1])]\n",
+    "array[2] = [int(num3[0]), int(num3[1])]\n",
+    "\n",
+    "print(\"가로평균: \", end = \" \")\n",
+    "for i in range(3):\n",
+    "    print((array[i][0] + array[i][1]) // 2, end = \" \")\n",
+    "print()\n",
+    "\n",
+    "print(\"세로평균: \", end = \" \")\n",
+    "sum1 = 0\n",
+    "for i in range(2):\n",
+    "    sum2 = 0\n",
+    "    for j in range(3):\n",
+    "        sum2 += array[j][i]\n",
+    "    sum1 += sum2\n",
+    "    print(sum2 // 3, end = \" \")\n",
+    "print()\n",
+    "\n",
+    "print(\"전체평균 :\", sum1 // 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(array[0][0] + array[0][1]) // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentence: tooooot\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isHandsome(str):\n",
+    "    for i in range(len(str)):\n",
+    "        if str[i] != str[len(str) - 1 - i]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "sentence = input(\"Enter the sentence: \")\n",
+    "print(isHandsome(sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'t'"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the two number : 123\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-246-87814da27a1d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter the two number : \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = input(\"Enter the two number : \").split(\" \")\n",
+    "a = int(a)\n",
+    "b = int(b)\n",
+    "A = [a, b]\n",
+    "for i in range(2, 10):\n",
+    "    A.append(A[i-2]*A[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### "
    ]
   }
  ],
