--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88321,25 +88321,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the two number : 123\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-246-87814da27a1d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter the two number : \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+      "Enter the two number : 3 4\n",
+      "[3, 4, 2, 8, 6, 8, 8, 4, 2, 8]\n"
      ]
     }
    ],
@@ -88349,15 +88339,324 @@
     "b = int(b)\n",
     "A = [a, b]\n",
     "for i in range(2, 10):\n",
-    "    A.append(A[i-2]*A[])"
+    "    A.append(A[i-2]*A[i-1]%10)\n",
+    "print(A)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 255,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27 48 63 \n",
+      "48 25  8 \n",
+      " 3 14  4 \n"
+     ]
+    }
+   ],
    "source": [
-    "### "
+    "def print_arr(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr[i])):\n",
+    "            print(\"%2d\" %arr[i][j], end = \" \")\n",
+    "        print()\n",
+    "\n",
+    "def mul_array(arr1, arr2):\n",
+    "    arr = [[0] * 3 for i in range(3)]\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            arr[i][j] = arr1[i][j] * arr2[i][j]\n",
+    "    return arr\n",
+    "\n",
+    "arr1 = [[3, 6, 9], [8, 5, 2], [1, 7, 4]]\n",
+    "arr2 = [[9, 8, 7], [6 ,5, 4], [3, 2, 1]]\n",
+    "print_arr(mul_array(arr1, arr2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert sentence: My name is Hong Gildong\n",
+      "1. My\n",
+      "2. name\n",
+      "3. is\n",
+      "4. Hong\n",
+      "5. Gildong\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"insert sentence: \").split(\" \")\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    print(\"{}. {}\".format(i+1, a[i]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a =[]\n",
+    "\n",
+    "for i in range(1,21):\n",
+    "    a.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert num: 2 6 4 16 19 11 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "attend = input(\"insert num: \").split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attend = list(map(int,attend))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
+      ]
+     },
+     "execution_count": 302,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attend.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 305,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 5, 6, 11, 16, 19]"
+      ]
+     },
+     "execution_count": 305,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = set(a) - set(attend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 7, 8, 9, 10, 12, 13, 14, 15, 17, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert num: 2 6 4 16 19 11 5\n",
+      "[1, 3, 7, 8, 9, 10, 12, 13, 14, 15, 17, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "students = []\n",
+    "for i in range(1, 21):\n",
+    "    students.append(i)\n",
+    "attend = input(\"insert num: \").split(\" \")\n",
+    "attend = list(map(int, attend))\n",
+    "absent = list(set(students) - set(attend))\n",
+    "print(absent)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
