--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88845,7 +88845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
@@ -88853,7 +88853,11 @@
      "output_type": "stream",
      "text": [
       "insert number: 5\n",
-      " 1 1 1 1 1 1 2 3 4 5 1 3 61015 1 4102035 1 5153570"
+      "    1    1    1    1    1\n",
+      "    1    2    3    4    5\n",
+      "    1    3    6   10   15\n",
+      "    1    4   10   20   35\n",
+      "    1    5   15   35   70\n"
      ]
     }
    ],
@@ -88871,9 +88875,23 @@
     "def printarray(array):\n",
     "    for i in range(len(array)):\n",
     "        for j in range(len(array[0])):\n",
-    "            print(\"%2d\" %array[i][j], end =\"\")\n",
+    "            print(\"%5d\" %array[i][j], end =\"\")\n",
+    "        print()\n",
     "\n",
     "printarray(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_arr(arr):\n",
+    "    for i in range(len(arr)):\n",
+    "        for j in range(len(arr[i])):\n",
+    "            print(\"%2d\" %arr[i][j], end = \" \")\n",
+    "        print()"
    ]
   },
   {
