--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88545,7 +88545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -88553,7 +88553,7 @@
      "output_type": "stream",
      "text": [
       "insert num: 2 6 4 16 19 11 5\n",
-      "[1, 3, 7, 8, 9, 10, 12, 13, 14, 15, 17, 18, 20]\n"
+      "missing class lists:  [1, 3, 7, 8, 9, 10, 12, 13, 14, 15, 17, 18, 20]\n"
      ]
     }
    ],
@@ -88564,43 +88564,108 @@
     "attend = input(\"insert num: \").split(\" \")\n",
     "attend = list(map(int, attend))\n",
     "absent = list(set(students) - set(attend))\n",
-    "print(absent)\n"
+    "print(\"missing class lists: \", absent)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 329,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Z a z\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chr(65), chr(90), chr(97), chr(122))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cryplist = [[0] * 27 for i in range(2)]\n",
+    "cryplist[0][26] = \"*\"\n",
+    "for i in range(26):\n",
+    "    cryplist[0][i] = chr(i+97)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 365,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', '*'], ['k', 'i', 'y', 'd', 'h', 'n', 's', 'z', 'm', 'a', 'r', 'q', 'g', 'x', 'c', 'u', 'j', 'b', 't', 'v', 'o', 'e', 'l', 'p', 'f', 'w', '*']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cryplist)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cryplist[1] = \"kiydhnszmarqgxcujbtvoelpfw*\"\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cryplist[1] = list(cryplist[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentenceHello My Friend\n",
+      "Zhqqc0Gf0Nbmhxd"
+     ]
+    }
+   ],
+   "source": [
+    "def ChangetoSecret(str):\n",
+    "    insert = [0] * len(str)\n",
+    "    for i in range(len(str)):\n",
+    "        for j in range(27):\n",
+    "            if str[i] == cryplist[0][j]:\n",
+    "                insert[i] = cryplist[1][j]\n",
+    "                break\n",
+    "            elif str[i] == cryplist[0][j].upper():\n",
+    "                insert[i] = cryplist[1][j].upper()\n",
+    "                break\n",
+    "    return insert\n",
+    "\n",
+    "def printInsert(insert):\n",
+    "    for i in range(len(insert)):\n",
+    "        print(insert[i], end= \"\")\n",
+    "        \n",
+    "a = input(\"Enter the sentence\")\n",
+    "printInsert(ChangetoSecret(a))\n",
+    "            "
+   ]
   },
   {
    "cell_type": "code",
