--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88669,24 +88669,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numlist = []\n",
+    "for i in range(40):\n",
+    "    numlist.append(random.randrange(1,11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 10, 2, 6, 10, 5, 9, 10, 8, 2, 5, 9, 3, 6, 6, 3, 10, 3, 10, 8, 10, 8, 2, 5, 7, 4, 9, 4, 5, 2, 4, 10, 9, 4, 1, 2, 9, 1, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numlist)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(1, 11):\n",
+    "    num = 0\n",
+    "    for j in range(len(numlist)):\n",
+    "        if numlist[j] == i:\n",
+    "            num +="
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 377,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1의 개수 : \n",
+      "2의 개수 : \n",
+      "3의 개수 : \n",
+      "4의 개수 : \n",
+      "5의 개수 : \n",
+      "6의 개수 : \n",
+      "7의 개수 : \n",
+      "8의 개수 : \n",
+      "9의 개수 : \n",
+      "10의 개수 : \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "for i in range(1,11):\n",
+    "    print(\"{}의 개수 : {}\".format(i, count(i)))"
+   ]
   },
   {
    "cell_type": "code",
