--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88706,15 +88706,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 383,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 의 개수:  2\n",
+      "2 의 개수:  5\n",
+      "3 의 개수:  4\n",
+      "4 의 개수:  5\n",
+      "5 의 개수:  5\n",
+      "6 의 개수:  3\n",
+      "7 의 개수:  1\n",
+      "8 의 개수:  3\n",
+      "9 의 개수:  5\n",
+      "10 의 개수:  7\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 11):\n",
     "    num = 0\n",
     "    for j in range(len(numlist)):\n",
     "        if numlist[j] == i:\n",
-    "            num +="
+    "            num += 1\n",
+    "            \n",
+    "    print(i, \"의 개수: \", num)"
    ]
   },
   {
@@ -88755,24 +88774,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 392,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter sth: grape\n",
+      "Enter sth: ergpa\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "sen1 = input(\"Enter sth: \")\n",
+    "sen2 = input(\"Enter sth: \")\n",
+    "\n",
+    "def isSame(sen1, sen2):\n",
+    "    list1 = list(sen1)\n",
+    "    list2 = list(sen2)\n",
+    "    list1.sort()\n",
+    "    list2.sort()\n",
+    "    for i in range(min(len(list1), len(list2))):\n",
+    "        if list1[i] != list2[i]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "print(isSame(sen1, sen2))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 434,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number: 4\n",
+      "Enter the number: 5\n",
+      "Enter the number: 6\n",
+      "Enter the number: 7\n",
+      "Enter the number: 7\n",
+      "Enter the number: 7\n",
+      "Enter the number: 2\n",
+      "Enter the number: 3\n",
+      "Enter the number: 4\n",
+      "Enter the number: 5\n",
+      "4 3 2 7 7 7 6 5 4 "
+     ]
+    }
+   ],
+   "source": [
+    "array = [0] * 10\n",
+    "i = 0\n",
+    "a = int(input(\"Enter the number: \"))\n",
+    "while a != 0:\n",
+    "    if i == 99:\n",
+    "        break\n",
+    "    else:\n",
+    "        array[i] = a\n",
+    "        i += 1\n",
+    "        a = int(input(\"Enter the number: \"))\n",
+    "\n",
+    "for j in range(i-1, -1, -1):\n",
+    "    print(array[j], end=\" \")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 451,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number: 5\n",
+      " 1 1 1 1 1 1 2 3 4 5 1 3 61015 1 4102035 1 5153570"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"insert number: \"))\n",
+    "array = [[0] * n for i in range(n)]\n",
+    "\n",
+    "for i in range(0, n):\n",
+    "    for j in range(0, n):\n",
+    "        if i == 0 or j == 0:\n",
+    "            array[i][j] = 1\n",
+    "        else:\n",
+    "            array[i][j] = array[i-1][j]+array[i][j-1]\n",
+    "            \n",
+    "def printarray(array):\n",
+    "    for i in range(len(array)):\n",
+    "        for j in range(len(array[0])):\n",
+    "            print(\"%2d\" %array[i][j], end =\"\")\n",
+    "\n",
+    "printarray(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 441,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 442,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(array[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 439,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,5):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
