--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -215,6 +215,15 @@
     "# 만약, 1/N이 유한 소수이면 0을 리턴하고, 무한소수이면 순환마디를 구하여 리턴한다. fun_recurring(N)함수를 작성하시오\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asdf"
+   ]
   }
  ],
  "metadata": {
