--- a/array (220~250).ipynb
+++ b/array (220~250).ipynb
@@ -88962,6 +88962,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 457,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number: 1 2 3 4 5\n",
+      "1 2 3 4 5 \n",
+      "2 3 4 5 1 \n",
+      "3 4 5 1 2 \n",
+      "4 5 1 2 3 \n",
+      "5 1 2 3 4 \n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = input(\"Enter the number: \")\n",
+    "numlist = numbers.split(\" \")\n",
+    "for i in range(len(numlist)):\n",
+    "    numlist[i] = int(numlist[i])\n",
+    "    \n",
+    "for i in range(len(numlist)):\n",
+    "    for j in range(len(numlist)):\n",
+    "        print(numlist[j], end=\" \")\n",
+    "    a = numlist[0]\n",
+    "    for j in range(len(numlist)):\n",
+    "        if j <= len(numlist) - 2:\n",
+    "            numlist[j] = numlist[j+ 1]\n",
+    "        else:\n",
+    "            numlist[j] = a\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
