--- a/recursive (251~274).ipynb
+++ b/recursive (251~274).ipynb
@@ -82,10 +82,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def countdown(n):\n",
+    "    if n == 0:\n",
+    "        print(\"끝\")\n",
+    "    else:\n",
+    "        print(n,\"번남았습니다.\"); countdown(n-1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 번남았습니다.\n",
+      "4 번남았습니다.\n",
+      "3 번남았습니다.\n",
+      "2 번남았습니다.\n",
+      "1 번남았습니다.\n",
+      "끝\n"
+     ]
+    }
+   ],
+   "source": [
+    "countdown(5)"
+   ]
   }
  ],
  "metadata": {
