--- a/problems-review/132-152.ipynb
+++ b/problems-review/132-152.ipynb
@@ -24,6 +24,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#139 자연수 N이 주어질때, N번째 알파벳 대문자와 소문자 출력하는 프로그램 작성\n",
+    "\n",
+    "num = int(input(\"insert number b/w 1~26: \"))\n",
+    "\n",
+    "def num_char(n):\n",
+    "    print(chr(n+64), chr(n+96))\n",
+    "    \n",
+    "num_char(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -64,6 +80,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#142 다음 숫자들을 앞에서부터 3자리씩 나누어서 합을 구하시오(2)\n",
+    "\n",
+    "#34 15 2 64 194 7\n",
+    "# => 341 + 526 + 419 + 47 = 1333\n",
+    "\n",
+    "def div_sum(n):\n",
+    "    num = input(\"insert number\").replace(\" \", \"\")\n",
+    "    num_list = []\n",
+    "    for i in range(len(num)):\n",
+    "        if len(num) > 3*i:\n",
+    "            a = num[3*i: 3*i+3]\n",
+    "            num_list.append(a)\n",
+    "    return sum(list(map(int, num_list)))\n",
+    "\n",
+    "div_sum(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -87,6 +126,26 @@
     "    print(\"age is : \", 100 + 19 - num, \"old\")\n",
     "else:\n",
     "    print(\"age is : \", 19 - num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#144 주민번호 앞자리를 입력받아 65세이상이면(2019 기준, 99세 최대) old를 출력하는 프로그램 (2)\n",
+    "#ex) 530716 => old\n",
+    "\n",
+    "def how_old(n):\n",
+    "    n = int(input(\"insert your first 6 digit of your ssn: \")[:2])\n",
+    "    \n",
+    "    if n > 19:\n",
+    "        return print(\"age is: \", 100+19 - ssn, \"old\")\n",
+    "    else:\n",
+    "        return print(\"age is: \", 19-ssn)\n",
+    "    \n",
+    "    how_old(1)"
    ]
   },
   {
@@ -153,20 +212,30 @@
     "if x > 50 and x < 100 and y > 40 and y < 80:\n",
     "    print(\"dot is insida square\")\n",
     "else:\n",
-    "    print(\"dot is not insida square\")"
+    "    print(\"dot is not insida square\")\n",
+    "    \n",
+    "    \n",
+    "# def isdot_in(n):\n",
+    "#     x = int(input(\"insert x: \"))\n",
+    "#     y = int(input(\"insert y: \"))\n",
+    "\n",
+    "#     if x > 50 and x < 100 and y > 40 and y < 80:\n",
+    "#         return print(\"dot is in square\")\n",
+    "#     else :\n",
+    "#         return print(\"dot is not in square\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert sentencebooking.com\n",
-      "not a good sentence\n"
+      "insert sentenceapple is red\n",
+      "Good sentence\n"
      ]
     }
    ],
@@ -175,7 +244,7 @@
     "\n",
     "Sentence = input(\"insert sentence\")\n",
     "\n",
-    "if Sentence[0] in \"aeiousAEIOU\":\n",
+    "if Sentence[0] in \"aeiouAEIOU\":\n",
     "    print(\"Good sentence\")\n",
     "else:\n",
     "    print(\"not a good sentence\")"
