--- a/problems-review/101~131.ipynb
+++ b/problems-review/101~131.ipynb
@@ -2,24 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert 10 numbers from 1 - 10. each number must be separated by space. you put:  1 2 3 4 5 6 7 8 9 10\n"
+      "insert number10\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#(109) 1부터 10까지 정수 10개를 원소르 가지는 튜플을 하나 만들어, 원소들의 합을 출력하는 프로그램을 작성하시오.\n",
     "\n",
-    "nums = input(\"insert 10 numbers from 1 - 10. each number must be separated by space. you put:  \").split(\" \")\n",
-    "tuple_num = tuple(map(int,nums))\n",
-    "sum_num = sum(tuple_num)\n",
-    "sum_num"
+    "n = int(input(\"insert number\"))\n",
+    "def num_sum(n):\n",
+    "    num_list = []\n",
+    "    for i in range(1, n+1):\n",
+    "        num_list.append(i)\n",
+    "    num_list = sum(tuple(num_list))\n",
+    "    return num_list\n",
+    "\n",
+    "num_sum(n)"
    ]
   },
   {
@@ -55,6 +70,35 @@
     "set_b = set(set_b)\n",
     "set_a & set_b\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#(127) 16과 30의 공약수를 만드세요.(2)\n",
+    "\n",
+    "def common_divisor(n):\n",
+    "    divisor_list = []\n",
+    "    for i in range(1,n+1):\n",
+    "        if n % i == 0:\n",
+    "            divisor_list.append(i)\n",
+    "    return set(divisor_list)\n",
+    "\n",
+    "common_divisor(16) & common_divisor(30)"
    ]
   },
   {
