--- a/problems-review/132-152.ipynb
+++ b/problems-review/132-152.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -278,10 +278,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['red',\n",
+       " 'orange',\n",
+       " 'blue',\n",
+       " 'green',\n",
+       " 'white',\n",
+       " 'black',\n",
+       " 'dark blue',\n",
+       " 'purple',\n",
+       " 'pink']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colors"
+   ]
   },
   {
    "cell_type": "code",
