--- a/problems-review/158~170.ipynb
+++ b/problems-review/158~170.ipynb
@@ -79,6 +79,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while  True:\n",
+    "    print(round(random.random()*10,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 98,
    "metadata": {},
    "outputs": [
@@ -103,6 +113,28 @@
     "    print(randrange(num1+1,num2))\n",
     "else:\n",
     "    print(\"no integer b/w two numbers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#161(2)\n",
+    "\n",
+    "def integer_find(n):\n",
+    "\n",
+    "    import random\n",
+    "\n",
+    "    num1, num2 = int(input(\"insert number\")), int(input(\"insert number\"))\n",
+    "\n",
+    "    if num1 != num2 and num1 +1 != num2:\n",
+    "        print(random.randrange(num1+1,num2))\n",
+    "    else:\n",
+    "        print(\"no integer between two numbers\")\n",
+    "\n",
+    "integer_find(n)"
    ]
   },
   {
@@ -141,9 +173,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#162(2)\n",
+    "\n",
+    "#(162) 10이상 20이하 정수형 난수4개발생, 평균이 15이상이면 Big 아니면 아니면 small을 출력\n",
+    "\n",
+    "def ran_gen(n):\n",
+    "\n",
+    "    import random\n",
+    "    import statistics\n",
+    "\n",
+    "    a = []\n",
+    "    for i in range(4):\n",
+    "        i = random.randrange(10,21)\n",
+    "        a.append(i)\n",
+    "    if statistics.mean(a) >= 15:\n",
+    "        print(\"Big\", statistics.mean(a))\n",
+    "    else:\n",
+    "        print(\"Small\", statistics.mean(a))\n",
+    "\n",
+    "ran_gen(n)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## 163 총 3단계의 걸쳐 문제를 맞출경우 다음 단계로 넘어가는 퀴즈를 만드세요. 1단계: 1~2사이 정수, 2단계,1~4사이, 3단계 1~8사이\n",
     "#중간에 틀리면 Failed. try next time. 3단계 모두 맞추면 Congrats!를 출력\n",
-    "\n",
+    "from random import randrange\n",
     "num1, num2, num3 = randrange(1,3), randrange(1,5), randrange(1,9)\n",
     "\n",
     "while True:\n",
@@ -264,7 +326,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#170(2)\n",
+    "\n",
+    "num1, num2 = int(input(\"insert number\")), int(input(\"insert number\"))\n",
+    "\n",
+    "\n",
+    "i = min(num1,num2)\n",
+    "while i < max(num1,num2):\n",
+    "    if i % 5 == 0:\n",
+    "        print(i)\n",
+    "    i += 1\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "code",
