--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -21657,7 +21657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -21679,14 +21679,135 @@
     "\n",
     "\n",
     "i = min(num1,num2)\n",
-    "while min(num1,num2) * 5 < max(num1,num2):\n",
-    "    \n",
+    "while i < max(num1,num2):\n",
+    "    if i % 5 == 0:\n",
+    "        print(i)\n",
+    "    i += 1\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "#173 L이 다음과같이 주어졌을때, 13일때 빠져나오도록 하시오 (for, in사용)\n",
     "\n",
+    "L = [1, 9, 4, 13, 5, 6]\n",
     "\n",
+    "for i in L:\n",
+    "    if i == 13:\n",
+    "        print(i)\n",
+    "        break\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#177 정수하나를 입력받아, 1부터 정수까지의 합을 구하시오\n",
     "\n",
-    "for i in range(min(num1,num2), max(num1,num2)):\n",
-    "    if i % 5 ==0:\n",
-    "        print(i)"
+    "num = int(input(\"insert number\"))\n",
+    "\n",
+    "a = 0\n",
+    "for i in range(1,num+1):\n",
+    "    a += i\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number16\n",
+      "16 is not a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "#180 입력받은 수가 소수인지 아닌지 알려주는 프로그램\n",
+    "\n",
+    "num = int(input(\"insert number\"))\n",
+    "\n",
+    "a = []\n",
+    "\n",
+    "for i in range(1, num+1):\n",
+    "    if num % i ==0:\n",
+    "        a.append(i)\n",
+    "        \n",
+    "if len(a) == 2:\n",
+    "    print(\"{} is a prime number\".format(num))\n",
+    "else:\n",
+    "    print(\"{} is not a prime number\".format(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.01 µs\n",
+      "insert number: 13547\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 280,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#181 입력받은 각 자리수를 더하는 프로그램. ex) 13547 => 20\n",
+    "%time\n",
+    "num = input(\"insert number: \")\n",
+    "sum(list(map(int,num)))\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -21694,35 +21815,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#182 입력된 문자열이 숫자인지 판별해주는 프로그램. ex) 167o7 => False\n",
+    "\n",
+    "num = \"1234567890\"\n",
+    "num = list(num)\n",
+    "\n",
+    "a = input(\"insert sth: \")\n",
+    "\n",
+    "\n",
+    "b = []\n",
+    "for i in a:\n",
+    "    if i in num:\n",
+    "        b.append(i)\n",
+    "        \n",
+    "if len(b) == len(a):\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 289,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a in num"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 284,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '8', '7', '9', '8']"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "code",
