--- a/problems-review/171~185.ipynb
+++ b/problems-review/171~185.ipynb
@@ -27,6 +27,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#173(2)\n",
+    "\n",
+    "L = [1, 9, 4, 13, 5, 6]\n",
+    "\n",
+    "for i in L:\n",
+    "    if i == 13:\n",
+    "        print(i)\n",
+    "        break\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -49,7 +66,7 @@
     }
    ],
    "source": [
-    "#177 정수하나를 입력받아, 1부터 정수까지의 하을 구하시오\n",
+    "#177 정수하나를 입력받아, 1부터 정수까지의 합을 구하시오\n",
     "\n",
     "num = int(input(\"insert integer\"))\n",
     "\n",
@@ -91,14 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert number13547\n"
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.72 µs\n",
+      "insert number: 13547\n"
      ]
     },
     {
@@ -107,20 +126,33 @@
        "20"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#181 입력받은 각 자리수를 더하는 프로그램. ex) 13547 => 20\n",
-    "\n",
-    "num = input(\"insert number\")\n",
+    "%time\n",
+    "num = input(\"insert number: \")\n",
     "num_sum = 0\n",
     "\n",
     "for i in num:\n",
     "    num_sum += int(i)\n",
     "num_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#181(2)\n",
+    "\n",
+    "%time\n",
+    "num = input(\"insert number: \")\n",
+    "sum(list(map(int,num)))"
    ]
   },
   {
