--- a/problems-review/171~185.ipynb
+++ b/problems-review/171~185.ipynb
@@ -192,9 +192,18 @@
    "source": [
     "#182 입력된 문자열이 숫자인지 판별해주는 프로그램. ex) 167o7 => False\n",
     "\n",
-    "a = int(input(\"insert integer\"))\n",
+    "num = \"1234567890\"\n",
+    "num = list(num)\n",
     "\n",
-    "if type(a) == int or type(a) == float:\n",
+    "a = input(\"insert sth: \")\n",
+    "\n",
+    "\n",
+    "b = []\n",
+    "for i in a:\n",
+    "    if i in num:\n",
+    "        b.append(i)\n",
+    "        \n",
+    "if len(b) == len(a):\n",
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"False\")"
@@ -202,15 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
-      "Wall time: 5.01 µs\n",
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 5.72 µs\n",
       "199\n"
      ]
     }
