--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -21812,9 +21812,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 292,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert sth: 16707\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "#182 입력된 문자열이 숫자인지 판별해주는 프로그램. ex) 167o7 => False\n",
     "\n",
@@ -21837,22 +21846,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 289,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199\n"
+     ]
     }
    ],
    "source": [
-    "a in num"
+    "#184 1 + (-2) + 3 + (-4) + ... 와 같은 방식으로 계속 더해갈 때, 총합이 100이상이 되는 마지막 수가 무엇일까요?\n",
+    "\n",
+    "\n",
+    "\n",
+    "a = 0\n",
+    "\n",
+    "for i in range(0, 1000):\n",
+    "    \n",
+    "    if i % 2 == 0:\n",
+    "        a -= i\n",
+    "    else:\n",
+    "        a += i\n",
+    "        \n",
+    "    if a == 100:\n",
+    "        print(i)\n",
+    "        break\n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "199\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "\n",
+    "for i in range(0, 1000):\n",
+    "    if i%2 == 0:\n",
+    "        a -= i\n",
+    "    else:\n",
+    "        a += i\n",
+    "    if a == 100:\n",
+    "        print(i)\n",
+    "        break"
    ]
   },
   {
@@ -21872,7 +21923,17 @@
     }
    ],
    "source": [
-    "a"
+    "#185 HandsomeQ 수열, n이 짝수 -> n /2\n",
+    "#                    n이 홀수 -> 2n + 2\n",
+    "# ex) n = 13 경우, 13->28->14->7->16->8->4->2->1   길이는 = 9\n",
+    "# 숫자 입력받았을때 길이를 구하는것을 나타내시오\n",
+    "\n",
+    "num = int(input(\"insert number\"))\n",
+    "\n",
+    "num_list = []\n",
+    "while True:\n",
+    "    if num == 1:\n",
+    "        num\n"
    ]
   },
   {
