--- a/problems-review/188~200.ipynb
+++ b/problems-review/188~200.ipynb
@@ -44,6 +44,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "M\n",
+      "Me\n",
+      "Mer\n",
+      "Merr\n",
+      "Merry\n",
+      "Merry \n",
+      "Merry C\n",
+      "Merry Ch\n",
+      "Merry Chr\n",
+      "Merry Chri\n",
+      "Merry Chris\n",
+      "Merry Christ\n",
+      "Merry Christm\n",
+      "Merry Christma\n",
+      "Merry Christmas\n"
+     ]
+    }
+   ],
+   "source": [
+    "#188 Merry Christmas를 입력받으면 \n",
+    "#M\n",
+    "#Me\n",
+    "#Mer ... 등등 끝까지 완성하는프로그램\n",
+    "\n",
+    "sentence = \"Merry Christmas\"\n",
+    "\n",
+    "for i in range(0, len(sentence)):\n",
+    "    for j in range(0, i+1):\n",
+    "        print(sentence[j], end= \"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
