--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -21908,18 +21908,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['1', '2', '8', '7', '9', '8']"
-      ]
-     },
-     "execution_count": 284,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number13\n",
+      "9\n"
+     ]
     }
    ],
    "source": [
@@ -21933,7 +21931,37 @@
     "num_list = []\n",
     "while True:\n",
     "    if num == 1:\n",
-    "        num\n"
+    "        num_list.append(num)\n",
+    "        print(len(num_list))\n",
+    "        break\n",
+    "\n",
+    "    elif num % 2 == 0:\n",
+    "        num_list.append(num)\n",
+    "        num = num // 2\n",
+    "        \n",
+    "    elif num % 2 == 1:\n",
+    "        num_list.append(num)\n",
+    "        num = 2 * num + 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[13, 28, 14, 7, 16, 8, 4, 2, 1]"
+      ]
+     },
+     "execution_count": 319,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_list"
    ]
   },
   {
