--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -21966,6 +21966,287 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Me\n",
+      "Mer\n",
+      "Merr\n",
+      "Merry\n",
+      "Merry \n",
+      "Merry C\n",
+      "Merry Ch\n",
+      "Merry Chr\n",
+      "Merry Chri\n",
+      "Merry Chris\n",
+      "Merry Christ\n",
+      "Merry Christm\n",
+      "Merry Christma\n",
+      "Merry Christmas\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"Merry Christmas\"\n",
+    "\n",
+    "for i in range(1, len(sentence)):\n",
+    "    for j in range(0, i+1):\n",
+    "        print(sentence[j], end=\"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "***\n",
+      "*****\n",
+      "*******\n",
+      "*********\n",
+      "***********\n",
+      "***********\n",
+      "***********\n",
+      "***********\n",
+      "***********\n",
+      "***********\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(11):\n",
+    "    if i < 5:\n",
+    "        print(\"*\" + \"*\"*2*i)\n",
+    "    else:\n",
+    "        print(\"*\" + \"*\"*10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           *           \n",
+      "          ***          \n",
+      "         *****         \n",
+      "        *******        \n",
+      "       *********       \n",
+      "      ***********      \n",
+      "     *************     \n",
+      "    ***************    \n",
+      "   *****************   \n",
+      "  *******************  \n",
+      " ********************* \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(11):\n",
+    "    print(\" \"*(10-i),\"*\"+\"*\"*2*i,\" \" * (10 - i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#196 어떤 두수의 곱으로 이루어진 소수가 있다. 어떤 두 수의 소수로 곱해졌는지 찾으시오\n",
+    "#ex) 143 => 11 * 13\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input(\"enter the number: \"))\n",
+    "WN = False\n",
+    "for i in range(2, num):\n",
+    "    isTrue1 = True\n",
+    "    for j in range(2, i):\n",
+    "        if i % j ==0:\n",
+    "            isTrue1 = False\n",
+    "        if isTrue1 == True:\n",
+    "            for j in range(2, i):\n",
+    "                isTrue2 = True\n",
+    "                for k in range(2,j):\n",
+    "                    if j % k == 0:\n",
+    "                        is True = False\n",
+    "                if isTrue2 == True:\n",
+    "                    if num == i * j\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number : 143\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n",
+      "143 = 13 X 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#196 어떤 두수의 곱으로 이루어진 소수가 있다. 어떤 두 수의 소수로 곱해졌는지 찾으시오\n",
+    "#ex) 143 => 11 * 13\n",
+    "\n",
+    "num = int(input(\"Enter the number : \"))\n",
+    "WN = False\n",
+    "\n",
+    "for i in range(2, num):\n",
+    "    isTrue1 = True\n",
+    "    for j in range(2, i):\n",
+    "        if i % j == 0:\n",
+    "            isTrue1 = False\n",
+    "        if isTrue1 == True:\n",
+    "            for j in range(2, i):\n",
+    "                isTrue2 = True\n",
+    "                for k in range(2,j):\n",
+    "                    if j % k == 0:\n",
+    "                        isTrue = False\n",
+    "                if isTrue2 == True:\n",
+    "                    if num == i * j:\n",
+    "                        print(num, \"=\", max(i,j),\"X\", min(i,j))\n",
+    "                        WN = True\n",
+    "                        break\n",
+    "if WN == False:\n",
+    "    print(\"Wrong number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "495"
+      ]
+     },
+     "execution_count": 358,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#197 00:00 ~ 23:59 시계중 3이 가르치는 분을 모두 구하시오\n",
+    "\n",
+    "\n",
+    "clock = 0\n",
+    "for i in range(24):\n",
+    "    for j in range(60):\n",
+    "        cal = str(i) + str(j)\n",
+    "        if \"3\" in cal:\n",
+    "            clock += 1\n",
+    "\n",
+    "clock\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 375,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hello = set()\n",
+    "\n",
+    "for i in range(1,101):\n",
+    "    for j in range(1,101):\n",
+    "        for k in range(1,101):\n",
+    "            if i + j + k == 100:\n",
+    "                hello.update({i, j, k})\n",
+    "len(hello)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-385-c58f7145eacf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m                         \u001b[0mnum_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mnum_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mnum_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m49\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "#200 1부터 5까지 숫자를 단 한번만 써서 만든 다섯 자리수들을 가장 작은 수부터 커지는 순서로 나열했을 때, 50번쨰 오는 수를 구하는 프로그램.\n",
+    "\n",
+    "num = [1, 2, 3, 4, 5]\n",
+    "num_list = []\n",
+    "\n",
+    "\n",
+    "for i in num:\n",
+    "    for j in num:\n",
+    "        for k in num:\n",
+    "            for l in num:\n",
+    "                for m in num:\n",
+    "                    nstr = str(i) + str(j) + str(k) + str(l) + str(m)\n",
+    "                    if len({nstr}) == 5:\n",
+    "                        num_list.append(nstr)\n",
+    "num_list.sort()                        \n",
+    "num_list[49]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
