--- a/problems-review/188~200.ipynb
+++ b/problems-review/188~200.ipynb
@@ -165,25 +165,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number : 143\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n",
-      "143 = 13 X 11\n"
+      "Enter the number : 21\n",
+      "21 = 7 X 3\n",
+      "21 = 7 X 3\n",
+      "21 = 7 X 3\n",
+      "21 = 7 X 3\n",
+      "21 = 7 X 3\n"
      ]
     }
    ],
@@ -267,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +274,7 @@
    ],
    "source": [
     "#198 a, b, c 가 자연수일때, a+b+c = 100을 만족하는 세 자연수의 조합개수를 구하시오. (30 40 30), (40,30,30) 은 중복\n",
-    "\n",
+    "###자연수!!!, 100\n",
     "myset = set()\n",
     "\n",
     "for a in range(1, 100):\n",
@@ -316,7 +310,7 @@
     "            for l in num:\n",
     "                for m in num:\n",
     "                    nstr = str(i)+str(j)+str(k)+str(l)+str(m)\n",
-    "                    if len({i,j,k,l,m}) == 5:\n",
+    "                    if len({i,j,k,l,m}) == 5: #len을 해줘야 5개인 set만 표기\n",
     "                        num_list.append(int(nstr))\n",
     "num_list.sort()\n",
     "print(num_list[49])"
